kubernetes/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote-tomcat
  namespace: vote
spec:
  selector:
    app: vote-tomcat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  # 내부 서비스로만 접근 가능
