kubernetes/backend/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-tomcat-policy
  namespace: vote
spec:
  podSelector:
    matchLabels:
      app: vote-tomcat
  policyTypes:
  - Ingress
  ingress: 
  - from:
    # kube-system → 헬스체크, DNS 등 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
  - from:
    # vote-nginx → frontend → tomcat 연결 허용
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vote
    - podSelector:
        matchLabels:
          app: vote-nginx
